# TinyCopyQ

./: .clang-format  .gitignore  CMakeLists.txt
src/: TinyCopyQTrayIcon.cpp  TinyCopyQTrayIcon.h  clipboard_listener.cpp  clipboard_listener.h  clipboardmainwindow.cpp  clipboardmainwindow.h  content_list_widget.cpp  content_list_widget.h  data_structure.h  main.cpp  pch.hpp  window_listener.cpp  window_listener.h
ui/: clipboardmainwindow.ui
